--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "awkward-runner",
   "type": "module",
+  "version": "1.0.0",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
     "build": "webpack"
